GitOps/clusters/cyberhawk-talos-k8s/3-apps/portfolio/06-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-api
  namespace: portfolio
spec:
  selector:
    app: portfolio-api
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-web
  namespace: portfolio
spec:
  selector:
    app: portfolio-web
  ports:
    - port: 8080
      targetPort: 8080
